--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is <a href="https://youtu.be/YaEG2aWJnZ8?si=q1J2bC6gPpATVhMm">Sia - Unstoppable</a></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
